# ur5_action_dataset

./: README.md
catkin_ws/: extracted_inliers.pcd
catkin_ws/devel/: .catkin  setup.sh
catkin_ws/devel/include/arm_msgs/: LegState.h  ManipulatorState.h
catkin_ws/devel/include/robotiq_3f_gripper_articulated_msgs/: Robotiq3FGripperRobotOutput.h
catkin_ws/devel/include/robotiq_3f_gripper_control/: Robotiq3FGripperConfig.h
catkin_ws/devel/lib/pkgconfig/: arm_msgs.pc  can_msgs.pc  logging_tools.pc  robotiq_2f_140_gripper_visualization.pc  robotiq_2f_85_gripper_visualization.pc  robotiq_2f_c2_gripper_visualization.pc  robotiq_2f_gripper_action_server.pc  robotiq_2f_gripper_control.pc  robotiq_3f_gripper_articulated_gazebo.pc  robotiq_3f_gripper_articulated_gazebo_plugins.pc  robotiq_3f_gripper_articulated_msgs.pc  robotiq_3f_gripper_control.pc  robotiq_3f_gripper_joint_state_publisher.pc  robotiq_3f_gripper_visualization.pc  robotiq_3f_rviz.pc  robotiq_ethercat.pc  robotiq_ft_sensor.pc  robotiq_modbus_rtu.pc  robotiq_modbus_tcp.pc  (+17 more)
catkin_ws/install/: _setup_util.py  local_setup.sh  setup.sh
catkin_ws/src/alpaca_logging_tools/: CMakeLists.txt
catkin_ws/src/alpaca_logging_tools/alpaca_logging_tools/: __init__.py  context.py  metadata_dataclasses.py
catkin_ws/src/alpaca_logging_tools/scripts/: relay.py  rosbag_log_service.py
catkin_ws/src/arm_msgs/: CMakeLists.txt
catkin_ws/src/arm_msgs/msg/: ManipulatorState.msg
catkin_ws/src/logging_ui/: README.md  logging.ui  main.py  metadata.ui  ros_communication_settings.ui
catkin_ws/src/segmentation/: CMakeLists.txt
(+218 files in other folders)
